fixed bugs in appearance on mobile

--- a/styles/mobile.css
+++ b/styles/mobile.css
@@ -48,7 +48,6 @@ h1 {
 .logo {
     float:center;
     width:75px;
-    height: 75px;
 }
 
 /* Projects Section */
